src/test/deca/syntax/valid/synt/class_this_operator.deca
/*
    Description : Test sur une utilisation simple de l'opérateur this

    Résultat : OK
*/
class B{
    B p = this;
}
