src/test/deca/syntax/invalid/synt/var_name_protected.deca
// @expected_output deca:8:8:
/*
    Description : Test sur un déclaration de variable avec un nom réservé
    
    Résultat : rejeté à l'analyse syntaxique
*/
{
    int protected;
}
